--- a/index.html
+++ b/index.html
@@ -457,6 +457,8 @@
       <div class="h4 title text-center">Anoop Varghese</div>
       <div class="text-center text-muted">
         <p>An investment in knowledge pays the best interest</p>
+	 <a href='https://www.symptoma.com/en/info/covid-19'>Visitor count</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2516254b6301caa4839c8719aaac548af263eb89'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/714215/t/2"></script>
       </div>
     </footer>
     <script src="js/core/jquery.3.2.1.min.js"></script>
