updated visitor count
removed extra sentence: visitor count on top of actual visitor count

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
       <div class="h4 title text-center">Anoop Varghese</div>
       <div class="text-center text-muted">
         <p>An investment in knowledge pays the best interest</p>
-	 <a href='https://www.symptoma.com/en/info/covid-19'>Visitor count</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2516254b6301caa4839c8719aaac548af263eb89'></script>
+	 <a href='https://www.symptoma.com/en/info/covid-19'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2516254b6301caa4839c8719aaac548af263eb89'></script>
 <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/714215/t/2"></script>
       </div>
     </footer>
