--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">Data Structures and Algorithms</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">Data Structures & Algorithms</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
@@ -192,7 +192,7 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/111.png" alt="Image"/>
                     <figcaption>
-                      <h3><strong><p id ="para1">Waste Management App</p></h3	></strong>
+                      <h6><strong><p id ="para1">Waste Management App</p></h6	></strong>
                       <h6><p id ="para2">With the help of my team, I created an application using Android Studio during Local Hack Day which can be used to request or donate food/clothes to orphanages, old age homes, etc. We stored this information in database (FireBase) and helped donors to reach requesters. Our main objective was to provide remaining food from our hostel mess to such organizations.We got First prize for our Project in the hackaton.</p></h6>
                     </figcaption>
                   </figure></a></div>
@@ -202,7 +202,7 @@
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                   <figure class="cc-effect"><img src="images/333.jpg" alt="Image"/>
                     <figcaption>
-                     <h3><strong><p id="para3">Water management- ML</p></strong></h3>
+                     <h6><strong><p id="para3">Water management- ML</p></strong></h6>
                      <h6><p id="para4">with the help of my team , I gathered information about water consumption in various places in the city of Coimbatore during IBM hackathon. We trained this data using IBM watson studio to predict which area is getting more water and which area is geting less according to the population. We used this information to predict which area should get water from the areas having excess water in case of any shortage.</p></h6>
                     </figcaption>
                   </figure></a></div>
