--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		}
 	#para2,#para4{color: black;
 		}
+	#h61,#h62  { font-size: 13px;
+		}
 
 	</style>
 
@@ -193,7 +195,7 @@
                   <figure class="cc-effect"><img src="images/111.png" alt="Image"/>
                     <figcaption>
                       <h6><strong><p id ="para1">Waste Management App</p></h6	></strong>
-                      <h6><p id ="para2">With the help of my team, I created an application using Android Studio during Local Hack Day which can be used to request or donate food/clothes to orphanages, old age homes, etc. We stored this information in database (FireBase) and helped donors to reach requesters. Our main objective was to provide remaining food from our hostel mess to such organizations.We got First prize for our Project in the hackaton.</p></h6>
+                      <h6 id="h61"><p id ="para2">With the help of my team, I created an application using Android Studio during Local Hack Day which can be used to request or donate food/clothes to orphanages, old age homes, etc. We stored this information in database (FireBase) and helped donors to reach requesters. Our main objective was to provide remaining food from our hostel mess to such organizations.We got First prize for our Project in the hackaton.</p></h6>
                     </figcaption>
                   </figure></a></div>
              
@@ -203,7 +205,7 @@
                   <figure class="cc-effect"><img src="images/333.jpg" alt="Image"/>
                     <figcaption>
                      <h6><strong><p id="para3">Water management- ML</p></strong></h6>
-                     <h6><p id="para4">with the help of my team , I gathered information about water consumption in various places in the city of Coimbatore during IBM hackathon. We trained this data using IBM watson studio to predict which area is getting more water and which area is geting less according to the population. We used this information to predict which area should get water from the areas having excess water in case of any shortage.</p></h6>
+                     <h6 id="h62"><p id="para4">with the help of my team , I gathered information about water consumption in various places in the city of Coimbatore during IBM hackathon. We trained this data using IBM watson studio to predict which area is getting more water and which area is geting less according to the population. We used this information to predict which area should get water from the areas having excess water in case of any shortage.</p></h6>
                     </figcaption>
                   </figure></a></div>
               
