--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
       <div class="container">
         <div class="content-center">
-          <div class="cc-profile-image"><a href="#"><img src="images/anoop_dp.jpg" alt="Image"/></a></div>
+          <div class="cc-profile-image"><a href="#"><img src="images/pic.jpg" alt="Image"/></a></div>
           <div class="h1 title">Anoop Varghese</div>
           <p class="category text-white">Pursuing Computer Science Engineering from Karunya Institute of Technology and Sciences, Coimbatore.</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://www.linkedin.com/in/anoopv1234/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Profile</a>
         </div>
