--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
     font-weight: 150px;
     overflow: auto;
   }
+	  
+    @media (max-width: 500px)  {
+    .abcd{
+      height: auto;
+    }
+
+  }	  
+	  
 /*  */
   .myButton {
   width: 110px;   
