--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg');"></div>
             <div class="container">
               <div class="content-center">
-                <div data-aos="zoom-in" class="cc-profile-image"><a><img src="images/pic.jpg" alt="Profile Image"/></a></div>
+                <div data-aos="zoom-in" class="cc-profile-image"><a><img src="images/pic.png" alt="Profile Image"/></a></div>
                 <div class="h1 title">Anoop Varghese</div>
                 <p class="category text-white">Persuing Computer Science Engineering from Karunya Institute of Technology and Sciences, Coimbatore.</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://www.linkedin.com/in/anoopv1234/" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Profile</a>
               </div>
