--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <div class="content-center">
                 <div data-aos="zoom-in" class="cc-profile-image"><a><img src="images/pic.png" alt="Profile Image"/></a></div>
                 <div class="h1 title">Anoop Varghese</div>
-                <p class="category text-white">Persuing Computer Science Engineering from Karunya Institute of Technology and Sciences, Coimbatore.</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1yux8B39DDENnTLBmknn0n2dSevN7gjpd/view?usp=sharing" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">My Resume</a>
+                <p class="category text-white">Persuing Computer Science Engineering from Karunya Institute of Technology and Sciences, Coimbatore.</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><a class="btn btn-primary" href="https://drive.google.com/file/d/1yux8B39DDENnTLBmknn0n2dSevN7gjpd/view?usp=sharing" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">My Resume</a>
               </div>
             </div>
             <div class="section">
