--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
   right: 0;
  }
 /*  */
+
+#type-name a{
+  text-decoration: none;
+}	  
+	  
 @media (max-width: 500px){
 #type-name{
   display: none;
