--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
       </div>
       <div class="section" id="experience">
         <div class="container cc-experience">
-          <div class="h4 text-center mb-4 title">Work Experience</div>
+          <div class="h4 text-center mb-4 title">Technical Experience</div>
           <div class="card">
             <div class="row">
               <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
