--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
 #type-name a{
   text-decoration: none;
-}	  
-	  
+}
+
 @media (max-width: 500px){
 #type-name{
   display: none;
@@ -98,6 +98,18 @@
   display: block!important;
 
 }
+}
+
+@media (max-width: 991px){
+  #list1{
+    margin-top: 50px;;
+  }
+}
+
+@media (min-width: 992px){
+  #cross-mark{
+    display: none;
+  }
 }
 
 </style>
@@ -112,8 +124,9 @@
             <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-bar bar1"></span><span class="navbar-toggler-bar bar2"></span><span class="navbar-toggler-bar bar3"></span></button>
           </div>
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link smooth-scroll" href="#about"><b>About</b></a></li>
+            <ul class="navbar-nav" style="position: relative;">
+              <a id="cross-mark" style="font-size: 50px; position: absolute; top: 0; right: 20px; color: #fff; cursor: pointer;">&times;</a>
+              <li id="list1" class="nav-item"><a class="nav-link smooth-scroll" href="#about"><b>About</b></a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill"><b>Skills</b></a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio"><b>Projects</b></a></li>
               <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience"><b>Experience</b></a></li>
@@ -123,6 +136,11 @@
         </div>
       </nav>
     </div>
+    <script>
+      document.getElementById(`cross-mark`).addEventListener('click', function(){
+          document.querySelector(`.sidebar-collapse`).remove();
+      });
+    </script>
   </header>
   <div class="page-content">
     <div>
