--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
               </div>
               <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body">
-                  <div class="h5">Tech Intern at Adore India</div>
+                  <div class="h5">Front End Developer</div>
                   <p>	Got selected as Tech Intern at Adore India in june 2020. Adore India aims to inspire the young generation to dedicate their time and channelize their ideas into some positive and productive action which improves their knowledge, polishes their skills, and enriches their thought processes.</p>
                 </div>
               </div>
