--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>404 HTML Tempalte by Colorlib</title>
+    <title>404: Not Found</title>
 
     <!-- Google font -->
     <link
@@ -16,13 +16,6 @@
 
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="./css/404.css" />
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -40,5 +33,4 @@
       </div>
     </div>
   </body>
-  <!-- This templates was made by Colorlib (https://colorlib.com) -->
 </html>
